--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.application.name=Book-library
-spring.datasource.url=jdbc:mysql://localhost:3306/employee_system
+spring.datasource.url=jdbc:mysql://localhost:3306/olikbooklibrary
 spring.datasource.username=root
 spring.datasource.password=tiger
 spring.datasource.driver-class-name =com.mysql.jdbc.Driver
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql= true
 server.port=8081
